# aws-annoying

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Justfile  Makefile  README.md  docker-compose.yaml  flake.nix  mkdocs.yaml  pyproject.toml  renovate.json  versions.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.devcontainer.yaml
.devcontainer.example/: .env.example  devcontainer.json  docker-compose.devcontainer.yaml  onCreateCommand.sh
.github/workflows/: ci.yaml  devcf_ci.yaml  devcf_release.yaml  devcontainer-features.yaml  main_ci.yaml  main_docs.yaml  main_prepare-release.yaml  main_release.yaml  release.yaml
.vscode.example/: extensions.json  launch.json
aws_annoying/: app.py  cli.py  ecs_task_definition_lifecycle.py  load_variables.py  main.py  mfa.py  mfa_config.py  mfa_configure.py  variables.py
aws_annoying/cli/: app.py  ecs_task_definition_lifecycle.py  load_variables.py  logging_handler.py  main.py
aws_annoying/cli/ecs/: __init__.py  task_definition_lifecycle.py  wait_for_deployment.py
aws_annoying/cli/mfa/: configure.py
aws_annoying/cli/session_manager/: __init__.py  _common.py  install.py  port_forward.py  start.py  stop.py
aws_annoying/ecs/: __init__.py  deployment_waiter.py  wait_for.py
aws_annoying/session_manager/: __init__.py  _common.py  errors.py  install.py  session_manager.py  shortcuts.py
aws_annoying/utils/: downloader.py  ec2.py  platform.py  timeout.py
console/ecs-exec/: README.md  ecs-exec.user.js
devcontainer-features/session-manager-plugin/: install.sh
devcontainer-features/src/session-manager-plugin/: README.md  devcontainer-feature.json
docs/: index.md
docs/cli-references/: ecs.md  session-manager.md
examples/dbeaver/: README.md
main/: 404.html  index.html  objects.inv
main/cli-references/ecs/: index.html
main/cli-references/mfa/: index.html
main/cli-references/misc/: index.html
main/cli-references/session-manager/: index.html
main/search/: search_index.json
scripts/: Uninstall-SessionManagerPlugin.ps1
tests/: _helpers.py  conftest.py  test_ecs_task_definition_lifecycle.py  test_load_variables.py
tests/_helpers/: printenv.py  string_.py
tests/cli/: test_ecs_task_definition_lifecycle.py  test_load_variables.py
tests/cli/_helpers/: __init__.py  string_.py
tests/cli/ecs/: test_task_definition_lifecycle.py
tests/cli/ecs/snapshots/test_task_definition_lifecycle/test_dry_run/: stdout.txt
tests/cli/mfa/: test_configure.py
tests/cli/mfa/snapshots/test_configure/test_dry_run/: stdout.txt
tests/cli/session_manager/: test_install.py  test_session_manager.py
tests/cli/snapshots/test_load_variables/test_basic/: stdout.txt
tests/cli/snapshots/test_load_variables/test_dry_run/: stdout.txt
tests/cli/snapshots/test_load_variables/test_env_prefix/: stdout.txt
tests/cli/snapshots/test_load_variables/test_overwrite_env/: stdout.txt
tests/cli/snapshots/test_load_variables/test_resource_not_found/ssm/: stdout.txt
tests/cli/snapshots/test_load_variables/test_unsupported_resource/: stdout.txt
tests/ecs/: test_deployment_waiter.py  test_wait_for.py
tests/mfa/: test_configure.py
tests/session_manager/: test_session_manager.py
tests/snapshots/test_load_variables/test_basic/: stdout.txt
tests/snapshots/test_load_variables/test_dry_run/: stdout.txt
tests/snapshots/test_load_variables/test_env_prefix/: stdout.txt
tests/snapshots/test_load_variables/test_load_variables/: stdout.txt
tests/snapshots/test_load_variables/test_load_variables_env_prefix/: stdout.txt
tests/snapshots/test_load_variables/test_load_variables_overwrite_env/: stdout.txt
tests/snapshots/test_load_variables/test_load_variables_replace/: stdout.txt
tests/snapshots/test_load_variables/test_overwrite_env/: stdout.txt
tests/snapshots/test_load_variables/test_resource_not_found/ssm/: stdout.txt
tests/snapshots/test_load_variables/test_unsupported_resource/: stdout.txt
tests/utils/: test_platform.py  test_timeout.py
v0.10.0/cli-references/session-manager/: index.html
v0.8.4/cli-references/misc/: index.html
v0.8.5/: 404.html  index.html  objects.inv
v0.8.5/cli-references/mfa/: index.html
v0.8.5/cli-references/session-manager/: index.html
v0.8.5/search/: search_index.json
v0.9.0/: index.html
v0.9.0/cli-references/session-manager/: index.html
