[project]
name = "aws-annoying"
description = "Utilities to handle annoying AWS tasks."
version = "0.10.0"
authors = [{ name = "Yuchan Lee", email = "lasuillard@gmail.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10, <4.0"
dependencies = [
  "boto3>=1,<2",
  "requests>=2,<3",
  "tqdm>=4,<5",
  "typer>=0,<1",
  "pydantic>=2,<3",
]

[project.scripts]
"aws-annoying" = "aws_annoying.cli.main:entrypoint"

[dependency-groups]
dev = [
  "boto3-stubs[ecs,secretsmanager,ssm,sts,ec2]==1.43.26",
  "mike==2.2.0",
  "mkdocs==1.6.1",
  "mkdocs-material==9.7.6",
  "mkdocstrings[python]==1.0.4",
  "mypy==2.1.0",
  "ruff==0.15.16",
  "types-requests==2.33.0.20260518",
  "coverage==7.14.1",
  "moto[secretsmanager,server,ssm,ecs]==5.2.2",
  "pytest==9.0.3",
  "pytest-cov==7.1.0",
  "pytest-env==1.6.0",
  "pytest-snapshot==0.9.0",
  "pytest-sugar==1.1.1",
  "pytest-xdist==3.8.0",
  "testcontainers[localstack]==4.14.2",
  "toml==0.10.2",
  "types-toml==0.10.8.20260518",
]

[project.urls]
Homepage = "https://github.com/lasuillard-s/aws-annoying"
Repository = "https://github.com/lasuillard-s/aws-annoying.git"
Issues = "https://github.com/lasuillard-s/aws-annoying/issues"
Documentation = "https://lasuillard-s.github.io/aws-annoying/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aws_annoying"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN401", # Don't be too strict
  "COM812", # Formatting conflict
  "D100",
  "D105",
  "D106",
  "FIX",
  "TD003",
  "UP007",  # Available in Python 3.10+
  "UP045",  # Typer and pydantic may not work well with newer typing syntaxes, especially for union types
]

[tool.ruff.lint.extend-per-file-ignores]
"**/__init__.py" = ["D104"]
"tests/*" = ["D", "S101", "PLR2004", "SLF001", "N801"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
exclude = ['^\.venv/*']
namespace_packages = true
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_return_any = true
show_error_codes = true
strict_optional = true
no_implicit_reexport = true

[tool.pytest.ini_options]
addopts = [
  "--numprocesses=auto",
  "--strict-markers",
  "--doctest-modules",
  "--cov",
  "--cov-report=term",
  "--cov-report=xml",
  "--show-capture=all",
  "--junitxml=junit.xml",
  "--allow-snapshot-deletion",
]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning::"]
markers = [
  "unit: Isolated unit tests",
  "integration: Integration tests",
  "docker: Tests that require Docker to run",
]

[tool.coverage.run]
include = ["aws_annoying/*"]
omit = ["*tests*"]
branch = true
parallel = true

[tool.coverage.report]
skip_empty = true
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING"]
